@@ -37,6 +37,10 @@ Version 1.8.1
        template is wrong. (Stefan)
 - BUG: Issue #507: Vendorbranch feature needs
        safeguards. (Stefan)
+- BUG: Issue #508: Annoying dialog when
+       closing TortoiseMerge. (Stefan)
+- BUG: Issue #509: VersionCheck = false not
+       working like it should. (Stefan)
 
 Version 1.8.0
 See the release notes here:
